--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   },
   "devDependencies": {
     "@stencil/core": "^1.3.3"
+  },
+  "dependencies": {
+    "@paraboly/pwc-dynamic-form": "0.0.5"
   }
 }
