--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@stencil/core": "^1.3.3"
   },
   "dependencies": {
-    "@paraboly/pwc-dynamic-form": "0.0.5"
+    "@paraboly/pwc-dynamic-form": "0.0.6",
+    "@types/linq": "^2.2.33",
+    "linq": "^3.2.1"
   }
 }
