fixes for adherence to PR review
* variable name consistencies
* added some explanation comments on the example
* created an interface for the filterChanged event
* description in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@paraboly/pwc-filter",
   "version": "0.0.1",
-  "description": "Template repository for Paraboly Web Component Libraries",
+  "description": "Automatically filter a set of data using a dynamic form.",
   "keywords": [
     "paraboly",
     "stencil",
