--- a/package.json
+++ b/package.json
@@ -32,16 +32,32 @@
   "scripts": {
     "build": "stencil build --docs",
     "start": "stencil build --dev --watch --serve",
-    "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "test": "stencil test --spec --e2e --passWithNoTests",
+    "test.watch": "stencil test --spec --e2e --watchAll --passWithNoTests",
+    "generate": "stencil generate",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\" \"src/**/*.jsx\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "devDependencies": {
-    "@stencil/core": "^1.3.3"
+    "@stencil/core": "^1.8.5",
+    "@stencil/router": "^1.0.1",
+    "@stencil/sass": "^1.1.1",
+    "@types/jest": "^24.9.0",
+    "@types/puppeteer": "^2.0.0",
+    "jest": "^25.1.0",
+    "jest-cli": "^25.1.0",
+    "prettier": "^1.19.1",
+    "puppeteer": "^2.0.0",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0"
   },
   "dependencies": {
     "@paraboly/pwc-dynamic-form": "^0.3.6",
-    "@types/linq": "^2.2.33",
     "linq": "^3.2.1"
   }
 }
