support for null or undefined fields

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@paraboly/pwc-dynamic-form": "^3.2.1",
-    "linq": "^3.2.1"
+    "linq": "^3.2.1",
+    "lodash": "^4.17.15"
   }
 }
